--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
-    "mongoose": "^6.2.8"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.8",
+    "validator": "^13.7.0"
   }
 }
