--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "celebrate": "^15.0.1"
   }
 }
