--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
-    "validator": "^13.7.0",
-    "celebrate": "^15.0.1"
+    "validator": "^13.7.0"
   }
 }
